--- a/src/components/ContactMe/ContactMe.css
+++ b/src/components/ContactMe/ContactMe.css
@@ -10,15 +10,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: var(--spacing-lg);
+  padding: var(--spacing-md);
   background-color: var(--background-color);
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
   margin-bottom: var(--spacing-xl);
   transition: transform var(--transition-normal), box-shadow var(--transition-normal);
-  max-width: 600px;
   margin-left: auto;
   margin-right: auto;
+  max-height: 140vh;
 }
 
 .contact-container:hover {
